syntax = "proto3";

import "server.proto";
import "lobby_player.proto";

option csharp_namespace = "Tempest.Protocol";

service LobbyHostService {
  rpc CreateLobby(CreateLobbyRequest) returns (CreateLobbyResponse);
  rpc ReceiveLobbyUpdates(ReceiveLobbyUpdatesRequest) returns (stream LobbyUpdate);
}

message CreateLobbyRequest {
  string private_id = 1;
  Server server = 2;
}

message CreateLobbyResponse {
  string ticket = 1;
  uint64 id = 2;
}

message ReceiveLobbyUpdatesRequest {
  
}

message LobbyUpdate {
  oneof update {
    LobbyPlayer player_join = 2;
    uint64 player_leave = 3;
  }
}